cotacao validator for dates

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
 nome.message.nome=Nome n\u00E3o pode ser em branco.
 PosteriorDataEntrada.funcionario.dataSaida=Data de saída deve ser posterior a data de entrada.
 NomeJaExiste.funcionario.nome=Este nome j\u00E1 existe no Banco de Dados.
-CargoJaExiste.cargo.nome="Este cargo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
-GrupoJaExiste.grupo.nome="Este grupo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
-SubGrupoJaExiste.subgrupo.nome = "SubGrupo j\u00E1 existe"
-ProdutoJaExiste.produto.nome = "Este produto com o subgrupo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
-Propriedade.naopode.nome="Selecione uma propriedade" 
+CargoJaExiste.cargo.nome=Este cargo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
+GrupoJaExiste.grupo.nome=Este grupo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
+SubGrupoJaExiste.subgrupo.nome = SubGrupo j\u00E1 existe
+ProdutoJaExiste.produto.nome = Este produto com o subgrupo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
+Propriedade.naopode.nome=Selecione uma propriedade 
+
