Inicio das alteraçoes para trazer cotacao anterior

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,5 @@ SubGrupoJaExiste.subgrupo.nome = SubGrupo j\u00E1 existe
 ProdutoJaExiste.produto.nome = Este produto com o subgrupo j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
 Propriedade.naopode.nome=Selecione uma propriedade 
 
+CodigoJaExiste.propriedade.codigo=Um codigo igual j\u00E1 existe no Banco de Dados e n\u00E3o pode ser duplicado.
+
